# tetris

./: .gitignore  README.md  TODO.md  board.py  pyproject.toml  tetrimino.py  tetris.py
lib/: __init__.py  board.py  move_names.py  tetrimino.py
tetris/: tetris.py
tetris/lib/: __init__.py  block.py  boad_args.py  board.py  board_pos.py  event_handler.py  font.py  keyboard.py  loop.py  move_names.py  score_board.py  screen.py  tetrimino.py
