[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "A Tetris Game"
authors = ["Jim Pelton <james.s.pelton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
