[tool.poetry]
name = "tetris"
version = "0.1.0"
description = "A Tetris Game"
authors = ["Jim Pelton <james.s.pelton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
isort = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
